# Online-Course-Completion-ML

./: README.md  online_course_completion.csv  pyproject.toml  train_model.py
models/: gradient_boosting.pkl  gradient_boosting_model.pkl  logistic_regression.pkl
notebooks/: Online_Course_Completion_Prediction.ipynb
