[project]
name = "ml-project-1"
version = "0.1.0"
description = "\"Online Course Completion Prediction\""
authors = [
    {name = "Sahana L",email = "sahanal2024@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook (>=7.4.5,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
